force-app/main/default/objects/Opportunity/fields/OP_Budget_Number_Converted__c.field-meta.xml
<CustomField>
    <fullName>OP_Budget_Number_Converted__c</fullName>
    <formula>OP_Budget_Number_Org__c *  CURRENCYRATE(TEXT( CurrencyIsoCode ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP Budget Number Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>