force-app/main/default/objects/Opportunity/fields/OP_Budget_Number_Org__c.field-meta.xml
<CustomField>
    <fullName>OP_Budget_Number_Org__c</fullName>
    <label>OP Budget (Org currency as number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>