force-app/main/default/objects/Opportunity/fields/Opp_Project_Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Opp_Project_Budget_Total__c</fullName>
    <label>Opp Project Budget Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>