force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__Calculated_Blended_Rate__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__Calculated_Blended_Rate__c</fullName>
    <formula>if( ResourceHeroApp__RH_Total_Hours__c  &gt; 0,  ResourceHeroApp__RH_Total_Amount__c  /  ResourceHeroApp__RH_Total_Hours__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH Blended Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>