force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__Resource_Roll_up_Amount__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__Resource_Roll_up_Amount__c</fullName>
    <formula>ResourceHeroApp__RH_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH Roll-up Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>