force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Archive_Resource_Assignments__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Archive_Resource_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, will automatically check the RH Make Read Only, RH Exclude from Utilization Coloring and RH Exclude on Resource Tab checkboxes.</inlineHelpText>
    <label>RH Archive Resource Assignments</label>
    <type>Checkbox</type>
</CustomField>