force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Exclude_from_Utilization_Coloring__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Exclude_from_Utilization_Coloring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RH Exclude from Utilization Coloring</label>
    <type>Checkbox</type>
</CustomField>