force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Exclude_on_Resources_Tab__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Exclude_on_Resources_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RH Exclude on Resources Tab</label>
    <type>Checkbox</type>
</CustomField>