force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Make_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Make_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RH Make Read Only</label>
    <type>Checkbox</type>
</CustomField>