force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Remaining_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Remaining_Forecast_Amount__c</fullName>
    <formula>ResourceHeroApp__Resource_Roll_up_Amount__c -   ResourceHeroApp__RH_Roll_up_Actual_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH Remaining Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>