force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Remaining_Forecast_Hours__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Remaining_Forecast_Hours__c</fullName>
    <formula>ResourceHeroApp__Resource_Roll_up_Hours__c - ResourceHeroApp__RH_Roll_up_Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH Remaining Forecast Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>