force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Roll_up_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Roll_up_Actual_Hours__c</fullName>
    <formula>ResourceHeroApp__RH_Total_Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH Roll-up Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>