force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Total_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Total_Actual_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RH Total Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>