force-app/main/default/objects/Opportunity/fields/ResourceHeroApp__RH_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ResourceHeroApp__RH_Total_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RH Total Forecast Amount - DO NOT EDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>