force-app/main/default/objects/Opportunity/listViews/ResourceHeroApp__Resource_Hero.listView-meta.xml
<ListView>
    <fullName>ResourceHeroApp__Resource_Hero</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ResourceHeroApp__Resource_Roll_up_Hours__c</columns>
    <columns>ResourceHeroApp__RH_Roll_up_Actual_Hours__c</columns>
    <columns>ResourceHeroApp__Resource_Roll_up_Amount__c</columns>
    <columns>ResourceHeroApp__RH_Roll_up_Actual_Amount__c</columns>
    <columns>ResourceHeroApp__Calculated_Blended_Rate__c</columns>
    <columns>ResourceHeroApp__RH_Remaining_Forecast_Hours__c</columns>
    <columns>ResourceHeroApp__RH_Remaining_Forecast_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resource Hero</label>
</ListView>